feat: updateUpdate point handlers added
